--- a/src/index.scss
+++ b/src/index.scss
@@ -3,7 +3,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
 
+html, body{
+  width: 100%;
+  min-height: 100vh;
+}
+
 #root {
  color: $text;
  font-family: 'Inter', serif;
+ width: 100%;
+ min-height: 100vh;
+ overflow-x: hidden;
 }
